# gitlabrador

./: .gitignore  README.md  lint.sh  pyproject.toml  settings.toml  settings.yaml  test.sh  tui.sh
.github/workflows/: python-tests.yml
gitlabrador/: __main__.py  banner.py  config.py  errors.py  models.py
gitlabrador/api/: __init__.py  api.py  gql_executor.py  pager.py
gitlabrador/api/queries/: get_current_user.py  get_descendant_groups.py  get_group.py  get_projects.py
gitlabrador/cli/: __init__.py  config.py  groups.py  tui.py
gitlabrador/tui/: __init__.py  app.py
gitlabrador/tui/css/: global.tcss  welcome_screen.tcss
gitlabrador/tui/screens/: project_selection_screen.py  welcome_screen.py
tests/: conftest.py  test_settings.py
tests/test_queries/: test_get_current_user.py  test_get_descendant_groups.py  test_get_group.py  test_get_projects.py
tests/test_tui/: test_welcome_screen.py
